--- a/.github/workflows/docker-images.yml
+++ b/.github/workflows/docker-images.yml
@@ -15,41 +15,47 @@ on:
         type: string
 
 jobs:
-  base:
-    uses: "tweedegolf/actions-helpers/.github/workflows/container-image.yml@main"
-    with:
-        context: "${{ inputs.php_version }}"
-        file: "${{ inputs.php_version }}/Dockerfile"
-        push: ${{ github.ref == 'refs/heads/main' }}
-        platforms: "linux/amd64,linux/arm64"
-        build-args: |
+  build-images:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
+
+      - name: Build the base image
+        uses: tweedegolf/build-container-image@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          context: "${{ inputs.php_version }}"
+          file: "${{ inputs.php_version }}/Dockerfile"
+          push: ${{ github.ref == 'refs/heads/main' }}
+          platforms: "linux/amd64,linux/arm64"
+          build-args: |
             DEBIAN_VERSION=${{ inputs.debian_version }}
             POSTGRESQL_VERSION=${{ inputs.postgresql_version }}
             COMPOSER_VERSION=${{ inputs.composer_version }}
-        tags: |
+          tags: |
             ghcr.io/tweedegolf/php:${{inputs.php_version}}
             ${{ inputs.latest && 'ghcr.io/tweedegolf/php:latest' || '' }}
 
-  dev:
-    needs: [base]
-    uses: "tweedegolf/actions-helpers/.github/workflows/container-image.yml@main"
-    with:
-        context: "${{ inputs.php_version }}"
-        file: "${{ inputs.php_version }}/Dockerfile.dev"
-        push: ${{ github.ref == 'refs/heads/main' }}
-        platforms: "linux/amd64,linux/arm64"
-        tags: |
+      - name: Build the development image
+        uses: tweedegolf/build-container-image@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          context: "${{ inputs.php_version }}"
+          file: "${{ inputs.php_version }}/Dockerfile.dev"
+          push: ${{ github.ref == 'refs/heads/main' }}
+          platforms: "linux/amd64,linux/arm64"
+          tags: |
             ghcr.io/tweedegolf/php:${{inputs.php_version}}-dev
             ${{ inputs.latest && 'ghcr.io/tweedegolf/php:latest-dev' || '' }}
 
-  debug:
-    needs: [dev]
-    uses: "tweedegolf/actions-helpers/.github/workflows/container-image.yml@main"
-    with:
-        context: "${{ inputs.php_version }}"
-        file: "${{ inputs.php_version }}/Dockerfile.debug"
-        push: ${{ github.ref == 'refs/heads/main' }}
-        platforms: "linux/amd64,linux/arm64"
-        tags: |
+      - name: Build the debugging image
+        uses: tweedegolf/build-container-image@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          context: "${{ inputs.php_version }}"
+          file: "${{ inputs.php_version }}/Dockerfile.debug"
+          push: ${{ github.ref == 'refs/heads/main' }}
+          platforms: "linux/amd64,linux/arm64"
+          tags: |
             ghcr.io/tweedegolf/php:${{inputs.php_version}}-debug
             ${{ inputs.latest && 'ghcr.io/tweedegolf/php:latest-debug' || '' }}
